website/src/components/BuildPrinciples/BuildPrinciples.module.scss
@use "../../styles/interpolate" as interp;

/* ── TEXT ─────────────────────────────────── */

.principles__card-title {
  color: #1f1f1f;
  font-family: var(--font-archivo), "Archivo", sans-serif;
  font-weight: 600;
  text-transform: capitalize;
  @include interp.interpolate("font-size", 576px, 18px, 1400px, 24px, "ease-in-out");
  @include interp.interpolate("line-height", 576px, 22px, 1400px, 32px, "ease-in-out");
}

.principles__card-description {
  color: #6b727a;
  font-family: var(--font-archivo), "Archivo", sans-serif;
  font-weight: 500;
  @include interp.interpolate("font-size", 576px, 16px, 1400px, 18px, "ease-in-out");
  @include interp.interpolate("line-height", 576px, 24px, 1400px, 26px, "ease-in-out");
}

/* ── GRID / LAYOUT ───────────────────────── */

.principles {
  background: #f7f7f7;
  padding-left: 0;
  padding-right: 0;
  padding-top: 80px;
  padding-bottom: 80px;

  @media (min-width: 1400px) {
    padding-top: 120px;
    padding-bottom: 120px;
  }

  @media (min-width: 1024px) {
    background: none;
  }
}

.principlesContainer {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 40px;
  margin: 0 auto;
  padding: 0 20px;
  width: 100%;
  max-width: 100%;

  @media (min-width: 576px) {
    max-width: 540px;
  }

  @media (min-width: 768px) {
    max-width: 720px;
  }

  @media (min-width: 1024px) {
    max-width: 960px;
  }

  @media (min-width: 1200px) {
    max-width: 1140px;
  }

  @media (min-width: 1400px) {
    max-width: 1320px;
  }
}

// .principles__header {
//   display: flex;
//   flex-direction: column;
//   gap: 8px;
//   text-align: center;
//   width: 100%;

//   @media (min-width: 1024px) {
//     width: 630px;
//   }
// }

.principles__grid {
  display: grid;
  gap: 56px 20px;
  grid-template-columns: 1fr 1fr;
  width: 100%;

  @media (min-width: 1024px) {
    gap: 30px;
    grid-template-columns: repeat(4, 1fr);
  }
}

.principles__card {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.principles__card-icon {
  height: 75px;
  position: relative;
  width: auto;

  svg {
    height: 100%;
    width: auto;
  }

  @media (min-width: 1024px) {
    height: 100px;
  }
}

.principles__card-text {
  display: flex;
  flex-direction: column;
  gap: 8px;
  text-align: center;
}

